; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_thumbs2_want_resize.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_thumbs2_want_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thumb2 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.thumb2*)* @thumbs2_want_resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thumbs2_want_resize(i32 %0, i32 %1, %struct.thumb2* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.thumb2*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.thumb2* %2, %struct.thumb2** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.thumb2*, %struct.thumb2** %6, align 8
  %9 = getelementptr inbounds %struct.thumb2, %struct.thumb2* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp sge i32 %7, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %3
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.thumb2*, %struct.thumb2** %6, align 8
  %15 = getelementptr inbounds %struct.thumb2, %struct.thumb2* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = icmp sge i32 %13, %16
  br label %18

18:                                               ; preds = %12, %3
  %19 = phi i1 [ false, %3 ], [ %17, %12 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
